--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,33 @@
 {
-   "action": {
-      "default_popup": "popup.html"
-   },
-   "manifest_version" : 3,
-   "description": "Harold, the emotional sticky note which encourages you to keep note of your daily discoveries and be more mindful.",
-   "icons": {
-      "180": "images/icon-180.png",
-      "120": "images/icon-120.png",
-      "48": "images/icon-48.png"
-   },
-   "name": "Harold",
-   "offline_enabled": true,
-   "version": "0.2.0",
+   "manifest_version": 3,
+   "name": "Twitter2Mastodon",
+   "version": "1.0",
+   "permissions": [
+     "tabs"
+   ],
    "background": {
       "service_worker": "background.js"
     },
-   "permissions": [
-      "storage",
-      "alarms"
+   "action": {
+     "default_popup": "popup.html",
+     "default_icon": {
+      "180": "images/icon-180.png",
+      "120": "images/icon-120.png",
+      "48": "images/icon-48.png"
+     }
+   },
+   "host_permissions": [
+     "*://twitter.com/*"
+   ],
+   "content_scripts": [
+     {
+       "matches": [
+         "*://twitter.com/*"
+       ],
+       "js": [
+         "contentScript.js"
+       ]
+     }
    ]
-}
+ }
+ 
